fixed the link to actually point to our github page, refactored the splash page to make credits div more readable

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -10,7 +10,7 @@ body {
     background-size: cover;
 }
 
-#Main {
+#main {
 	/*background-color: rgba(175,175,175,0.1);*/
 	padding: 4px 0px;
 }
@@ -21,7 +21,6 @@ body {
   position: relative;
   text-align: center;
   top: 0%;
-  width: 60%;
 }
 
 #box {
@@ -29,8 +28,8 @@ body {
   margin: 0 auto;
   position: relative;
   text-align: center;
-  top: 200px;
   width: 100%;
+  float: right;
 }
 
 #inputGroup select {
@@ -79,7 +78,7 @@ body {
 
 	background-color: rgba(175,175,175, 1);
 	cursor: pointer;
-
+  
 } 
 
 #checkbox:active {
@@ -110,13 +109,26 @@ body {
 
 #credits {
 
-    position: absolute;
-    right: 16px;
-    top: 16px;
-
     text-align: center;
     font-family: orbitron;
     font-size: 18px;
     font-weight: bold;
     letter-spacing: 0.8px;
+    float: right;
+    margin-right: 1%;
+    background-color: rgba(100, 100, 100, 0.7);
+
+}
+
+/* unvisited link */
+a:link {
+  color: #900C3F; /* concordia magenta */
+}
+
+a:active {
+  color: white;
+}
+
+a:hover {
+  color: orange;
 }
